# hayeren_music_bot

./: pyproject.toml
bot/: bot.py
songs/: dict_songs.json  o_inch_hrashq.txt
