[tool.poetry]
name = "hayeren-music-bot"
version = "0.1.0"
description = ""
authors = ["AnastasiiaE"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
telebot = "0.0.5"
pyTelegramBotAPI = "4.26.0"
dotenv = ""


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
